# dleyna-diagnostics

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
doc/: TODO.txt  coding-style.txt  logging.txt
doc/server/dbus/: API.txt
libdleyna/diagnostics/: Makefile.am  async.c  async.h  control-point-diagnostics.h  device.c  device.h  dleyna-diagnostics-1.0.pc.in  dleyna-diagnostics-service.conf.in  manager.c  manager.h  prop-defs.h  server.c  server.h  task.c  task.h  upnp.c  upnp.h
m4/: compiler-flags.m4  log.m4
server/: Makefile.am  com.intel.dleyna-diagnostics.service.in  daemon.c  dleyna-diagnostics-service-1.0.pc.in
test/dbus/: dc.sh  diagconsole.py  monitor_props_changes.py
